--- a/package.json
+++ b/package.json
@@ -33,10 +33,16 @@
     "index.js"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "archiver": "^5.3.2",
     "sharp": "^0.30.7"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^1.1.1",
+    "eslint": "^8.53.0"
   }
 }
